# chromadb-airlines

./: .gitignore  README.md  main.py  pyproject.toml  streamlit_app.py
db/cceba7a3-b442-4be4-9e59-68a4f741ea9e/: index_metadata.pickle
src/: api.py  db.py  ingest.py  llm.py  main.py  query.py  test.py
